syntax = "proto3";

package blipblop.services.nodes.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/amimof/blipblop/api/services/nodes/v1;nodes";

service NodeService {
  rpc Join(JoinRequest) returns (JoinResponse) {}
  rpc Forget(ForgetRequest) returns (ForgetResponse) {}
  rpc Update(UpdateNodeRequest) returns (UpdateNodeResponse) {}
  // rpc Subscribe(Node) returns (stream Event) {}
  // rpc FireEvent(stream Event) returns (EventAck) {}
}

// enum Status {
//   JoinFail = 0;
//   JoinSuccess = 1;
//   ForgetFail = 2;
//   ForgetSuccess = 3;
// }

message Node {
  string name = 1;
  map<string, string> labels = 2;
	google.protobuf.Timestamp created = 3;
	google.protobuf.Timestamp updated = 4;
	uint64 revision = 5;
  Status status = 6;
}

message Status {
  repeated string ips = 1;
  string hostname = 2;
  string arch = 3;
  string os = 4;
}

message JoinRequest {
  Node node = 1;
}

message JoinResponse {
  string id = 1;
}

message ForgetRequest {
  string id = 1;
}

message ForgetResponse {
  string id = 1;
}

message UpdateNodeRequest {
  Node node = 1;
}

message UpdateNodeResponse {
  Node node = 1;
}